# plato-inference-runtime

./: ARCHITECTURE.md  Cargo.toml  README.md  pyproject.toml
src/: lib.rs
src/plato_inference_runtime/: __init__.py  runtime.py
src/plato_inference_runtime.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
