[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"
[project]
name = "plato-inference-runtime"
version = "0.1.0"
description = "Neural Plato inference engine — config, adapter slots, request builder"
license = {text = "MIT"}
requires-python = ">=3.8"
[project.urls]
Repository = "https://github.com/SuperInstance/plato-inference-runtime"
